[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Deneme.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Frostmage.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/World.gd" type="Script" id=10]

[node name="World" type="Node2D"]
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 0.243137, 0.352941, 0.380392, 1 )
margin_left = -50.1052
margin_top = -35.0
margin_right = 1950.89
margin_bottom = 1125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]

[node name="Start" type="Button" parent="."]
margin_left = 120.591
margin_top = 119.797
margin_right = 215.591
margin_bottom = 145.797
rect_scale = Vector2( 5, 5 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Finish" type="Button" parent="."]
margin_left = 1394.41
margin_top = 815.202
margin_right = 1488.41
margin_bottom = 850.202
rect_scale = Vector2( 5, 5 )
text = "FINISH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Practice" type="Button" parent="."]
margin_left = 616.951
margin_top = 434.995
margin_right = 763.951
margin_bottom = 475.995
rect_scale = Vector2( 5, 5 )
text = "PRACTICE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 991.012, 805.61 )
scale = Vector2( -10.0435, 6.46513 )

[node name="Frostmage2" parent="." instance=ExtResource( 3 )]

[node name="Particles2D2" type="Particles2D" parent="."]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Finish" to="." method="_on_Finish_pressed"]
[connection signal="pressed" from="Practice" to="." method="_on_Practice_pressed"]
